--- a/Chronicle-LogParser.csproj
+++ b/Chronicle-LogParser.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A25BADBC-0551-4049-978F-9C41DF409131}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chronicle_LogParser</RootNamespace>
+    <RootNamespace>com.greasyeggplant.chronicle.logparser</RootNamespace>
     <AssemblyName>Chronicle-LogParser</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,6 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogEvent.cs" />
+    <Compile Include="LogFile.cs" />
+    <Compile Include="LogLevel.cs" />
+    <Compile Include="LogParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
